@@ -497,8 +497,11 @@ static int	get_value(DC_ITEM *item, AGENT_RESULT *result)
 			res = NOTSUPPORTED;
 	}
 
-	if (SUCCEED != res && ISSET_MSG(result))
+	if (SUCCEED != res)
 	{
+		if (!ISSET_MSG(result))
+			SET_MSG_RESULT(result, zbx_strdup(NULL, "ZBX_NOTSUPPORTED"));
+
 		zabbix_log(LOG_LEVEL_DEBUG, "Item [%s:%s] error: %s", item->host.host, item->key_orig, result->msg);
 		zabbix_syslog("Item [%s:%s] error: %s", item->host.host, item->key_orig, result->msg);
 	}
